@@ -1,3 +1,8 @@
+2003-04-29  Michael Yount <csf@moscow.com>
+
+	* lib/Mj/Resend.pm:  (_post)  Apply "From" header changes
+	to the archived copy of a message.
+
 2003-04-23  Michael Yount <csf@moscow.com>
 
 	* lib/Mj/Resend.pm:  (post)  Bugfix:  Untaint moderation
